--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let item of cartData">
-    <app-product-cart [product]="item"/>
+    <app-product-cart [product]="item" (updateEvent)="updateCartValue()"/>
 </div>
 <div>
     <p>Total: {{cartValue}}</p>
