--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navBar">
     <ul class="routerList">
         <li class="routerItem"><a routerLink="/" class="routerLink bold">Home</a></li>
         <li class="routerItem"><a routerLink="/products/all" class="routerLink bold">Products</a></li>
@@ -6,4 +6,7 @@
         <li class="routerItem"><a routerLink="/contact" class="routerLink bold">Contact</a></li>
         <li class="routerItem"><a routerLink="/cart" class="routerLink bold">Cart</a></li>
     </ul>
+</nav>
+<nav class="navBarMobile">
+    <span>Icone</span>
 </nav>
