--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -13,7 +13,38 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
+
+.menuMobile{
+    position: absolute;
+    left: 0px;
+    top: 10vh;
+    border: 1px solid black;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: rgba(248, 0, 0, 0.761);
+    border: none;
+    text-align: center;
+}
+
+.routerMobileMenu{
+    margin: 50px;
+    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.routerMobileLink{
+    text-decoration: none;
+    color: white;
+}
+
+
 
 @media screen and (max-width: 600px) {
     .navBar{
