--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,12 +1,39 @@
 <nav class="navBar">
     <ul class="routerList">
-        <li class="routerItem"><a routerLink="/" class="routerLink bold">Home</a></li>
-        <li class="routerItem"><a routerLink="/products/all" class="routerLink bold">Products</a></li>
-        <li class="routerItem"><a routerLink="/about" class="routerLink bold">About</a></li>
-        <li class="routerItem"><a routerLink="/contact" class="routerLink bold">Contact</a></li>
-        <li class="routerItem"><a routerLink="/cart" class="routerLink bold">Cart</a></li>
+        <li class="routerItem"><a routerLink="/" class="routerLink bold" >Home</a></li>
+        <li class="routerItem"><a routerLink="/products/all" class="routerLink bold" >Products</a></li>
+        <li class="routerItem"><a routerLink="/about" class="routerLink bold" >About</a></li>
+        <li class="routerItem"><a routerLink="/contact" class="routerLink bold" >Contact</a></li>
+        <li class="routerItem"><a routerLink="/cart" class="routerLink bold" >
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="24.000000pt" height="24.000000pt" viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+                <path d="M334 4596 c-93 -42 -99 -178 -11 -229 14 -8 85 -14 199 -17 l176 -5 39 -31 c21 -17 46 -44 55 -60 12 -20 88 -456 237 -1347 181 -1086 224 -1327 245 -1372 31 -68 119 -163 184 -198 109 -59 46 -57 1482 -57 1287 0 1316 0 1347 20 83 50 83 165 -1 216 -30 18 -80 19 -1357 24 l-1326 5 -36 28 c-21 16 -45 39 -53 53 -16 23 -90 422 -80 431 2 2 568 53 1258 113 689 60 1282 113 1318 119 162 26 319 162 366 319 8 26 56 292 106 592 84 503 90 550 81 606 -6 34 -19 79 -29 100 -29 62 -111 138 -179 165 l-60 24 -1602 3 -1603 2 -4 23 c-3 12 -12 59 -21 104 -26 136 -79 226 -172 292 -101 73 -143 83 -348 88 -140 3 -187 0 -211 -11z m3936 -769 c51 -26 51 -31 -44 -600 -48 -293 -94 -546 -101 -562 -16 -41 -98 -112 -138 -121 -17 -3 -609 -57 -1314 -118 -1123 -98 -1284 -110 -1287 -96 -3 8 -59 341 -126 740 -66 399 -123 735 -125 748 l-5 22 1557 0 c1231 0 1563 -3 1583 -13z"/>
+                <path d="M1911 1004 c-162 -43 -313 -196 -356 -359 -19 -73 -19 -193 -1 -260 70 -262 337 -429 598 -374 186 39 358 211 397 397 55 261 -112 528 -374 598 -65 18 -195 17 -264 -2z m243 -262 c90 -41 146 -126 146 -227 0 -146 -109 -255 -255 -255 -70 0 -126 23 -173 70 -115 115 -100 300 33 392 73 50 164 57 249 20z"/>
+                <path d="M3703 1005 c-169 -46 -325 -211 -362 -383 -48 -228 64 -462 271 -564 157 -78 299 -78 456 0 207 102 319 336 271 564 -37 174 -194 338 -366 383 -71 19 -201 18 -270 0z m261 -273 c110 -60 159 -200 111 -320 -21 -52 -103 -128 -153 -142 -95 -26 -181 -7 -250 55 -59 53 -84 108 -84 185 0 120 79 221 195 251 50 12 127 0 181 -29z"/>
+                </g>
+            </svg>
+        </a></li>
     </ul>
 </nav>
 <nav class="navBarMobile">
-    <span>Icone</span>
+    <svg (click)="setShowMenu()" xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 24 24">
+        <path d="M0 0h24v24H0z" fill="none"/>
+        <path d="M4 18h16v-2H4v2zM4 13h16v-2H4v2zM4 6v2h16V6H4z"/></svg>
+      <a routerLink="/cart" class="routerLink bold" (click)="closeShowMenu()">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="24.000000pt" height="24.000000pt" viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
+            <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+            <path d="M334 4596 c-93 -42 -99 -178 -11 -229 14 -8 85 -14 199 -17 l176 -5 39 -31 c21 -17 46 -44 55 -60 12 -20 88 -456 237 -1347 181 -1086 224 -1327 245 -1372 31 -68 119 -163 184 -198 109 -59 46 -57 1482 -57 1287 0 1316 0 1347 20 83 50 83 165 -1 216 -30 18 -80 19 -1357 24 l-1326 5 -36 28 c-21 16 -45 39 -53 53 -16 23 -90 422 -80 431 2 2 568 53 1258 113 689 60 1282 113 1318 119 162 26 319 162 366 319 8 26 56 292 106 592 84 503 90 550 81 606 -6 34 -19 79 -29 100 -29 62 -111 138 -179 165 l-60 24 -1602 3 -1603 2 -4 23 c-3 12 -12 59 -21 104 -26 136 -79 226 -172 292 -101 73 -143 83 -348 88 -140 3 -187 0 -211 -11z m3936 -769 c51 -26 51 -31 -44 -600 -48 -293 -94 -546 -101 -562 -16 -41 -98 -112 -138 -121 -17 -3 -609 -57 -1314 -118 -1123 -98 -1284 -110 -1287 -96 -3 8 -59 341 -126 740 -66 399 -123 735 -125 748 l-5 22 1557 0 c1231 0 1563 -3 1583 -13z"/>
+            <path d="M1911 1004 c-162 -43 -313 -196 -356 -359 -19 -73 -19 -193 -1 -260 70 -262 337 -429 598 -374 186 39 358 211 397 397 55 261 -112 528 -374 598 -65 18 -195 17 -264 -2z m243 -262 c90 -41 146 -126 146 -227 0 -146 -109 -255 -255 -255 -70 0 -126 23 -173 70 -115 115 -100 300 33 392 73 50 164 57 249 20z"/>
+            <path d="M3703 1005 c-169 -46 -325 -211 -362 -383 -48 -228 64 -462 271 -564 157 -78 299 -78 456 0 207 102 319 336 271 564 -37 174 -194 338 -366 383 -71 19 -201 18 -270 0z m261 -273 c110 -60 159 -200 111 -320 -21 -52 -103 -128 -153 -142 -95 -26 -181 -7 -250 55 -59 53 -84 108 -84 185 0 120 79 221 195 251 50 12 127 0 181 -29z"/>
+            </g>
+        </svg>
+    </a>
 </nav>
+<section class="menuMobile" *ngIf="showMenu" (click)="closeShowMenu()">
+    <ul class="routerMobileMenu">
+        <li class="routerItem"><a routerLink="/" class="routerMobileLink bold">Home</a></li>
+        <li class="routerItem"><a routerLink="/products/all" class="routerMobileLink bold">Products</a></li>
+        <li class="routerItem"><a routerLink="/about" class="routerMobileLink bold">About</a></li>
+        <li class="routerItem"><a routerLink="/contact" class="routerMobileLink bold">Contact</a></li>
+    </ul>
+</section>
