update icons, font, mobile responsivity

--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -6,13 +6,14 @@
     gap: 10px;
 }
 
-.productPrice{
-    color: green;
-    font-size: 18px;
-}
-
 .productImage{
     height: 200px;
     width: 200px;
     border-radius: 10px;
+}
+
+.productActions{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
 }
