Update Home, Payment and Models

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="homeContent">
     <div class="textContainer">
         <span class="fontSizeTwentysix">Welcome to <span class="bold">The <span class="colorRed">Shop</span></span></span>
-        <span class="fontSizetwenty">We are the best Web App to buy <a routerLink="/products" class="routerLink"><span class="bold colorRed">products</span></a></span>
+        <span class="fontSizetwenty">We are the best Web App to buy <a routerLink="/products/all" class="routerLink"><span class="bold colorRed">products</span></a></span>
         <div>
             <a class="routerLink" routerLink="/products/all"><button class="button">Buy now</button></a>
         </div>
