New messages actions and ajust layout components

--- a/src/app/components/product-cart/product-cart.component.css
+++ b/src/app/components/product-cart/product-cart.component.css
@@ -12,6 +12,8 @@
     flex-direction: column;
     gap: 5px;
     justify-content: center;
+    width: 130px;
+    text-align: center;
 }
 .infoProductCartButtons{
     display: flex;
