--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -6,7 +6,7 @@
     <app-star-rating [rating]="product.rating"></app-star-rating>
     <div class="productActions">
         <a routerLink="/product/{{product.id}}" class="routerLink"><button class="button">Buy</button></a>
-        <div (click)="addToCart()">
+        <div (click)="addToCart()" class="svgAction">
             <svg version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             width="30px" height="30px" viewBox="0 0 32 32" xml:space="preserve">
            <style type="text/css">
