--- a/src/app/pages/payment/payment.component.css
+++ b/src/app/pages/payment/payment.component.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin: 50px 0px;
 }
 
 .paymentForm{
@@ -25,7 +26,10 @@
 .reviewProducts{
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
+    border: 1px solid rgb(211, 211, 211);
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .miniCardReviewProduct{
@@ -33,6 +37,7 @@
     flex-direction: column;
     gap: 2px;
     font-size: 12px;
+    border-bottom: 1px solid red;
 }
 
 .inputStyle{
