Update Css Components and pages

--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -21,3 +21,17 @@
 .svgAction:hover{
     cursor: pointer;
 }
+
+.productName{
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.productPrice{
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.productCategory{
+    font-size: 1rem;
+}
