--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,9 +1,12 @@
 <section class="productContent">
+
     <img src="{{product.imageUrl}}" alt="" class="productImage">
-    <span class="productName bold">{{product.name}}</span>
-    <span class="productPrice bold">R$ {{product.price}},00</span>
-    <span>{{product.category}}</span>
+    <span class="productName">{{product.name}}</span>
+    <span class="productPrice">R$ {{product.price}},00</span>
+    <span class="productCategory">{{product.category}}</span>
+
     <app-star-rating [rating]="product.rating"></app-star-rating>
+
     <div class="productActions">
         <a routerLink="/product/{{product.id}}" class="routerLink"><button class="button">Buy</button></a>
         <div (click)="addToCart()" class="svgAction">
