--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -7,6 +7,12 @@
 
 .routerItem{
     list-style: none;
+    font-size: 1rem;
+}
+
+.routerItemMobile{
+    list-style: none;
+    font-size: 2rem;
 }
 
 .navBarMobile{
