--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -35,9 +35,9 @@
 </nav>
 <section class="menuMobile" *ngIf="showMenu" (click)="closeShowMenu()">
     <ul class="routerMobileMenu">
-        <li class="routerItem"><a routerLink="/" class="routerMobileLink bold">Home</a></li>
-        <li class="routerItem"><a routerLink="/products/all" class="routerMobileLink bold">Products</a></li>
-        <li class="routerItem"><a routerLink="/about" class="routerMobileLink bold">About</a></li>
-        <li class="routerItem"><a routerLink="/contact" class="routerMobileLink bold">Contact</a></li>
+        <li class="routerItemMobile"><a routerLink="/" class="routerMobileLink bold">Home</a></li>
+        <li class="routerItemMobile"><a routerLink="/products/all" class="routerMobileLink bold">Products</a></li>
+        <li class="routerItemMobile"><a routerLink="/about" class="routerMobileLink bold">About</a></li>
+        <li class="routerItemMobile"><a routerLink="/contact" class="routerMobileLink bold">Contact</a></li>
     </ul>
 </section>
