--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="productsContainer">
     <section class="productsCategories">
-        <span class="categorieTitle fontSizetwenty bold">Category</span>
+        <span class="categorieTitle">Category</span>
         <ul class="categorieList">
             <li *ngFor="let categorie of categories" class="categorieListItem"><a routerLink="/products/{{categorie}}" class="routerLink">{{categorie}}</a></li>
         </ul>
