--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -18,7 +18,8 @@
 }
 
 .productCartTotal{
-    font-size: 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 650px){
