--- a/src/app/pages/products/products.component.css
+++ b/src/app/pages/products/products.component.css
@@ -26,4 +26,10 @@
     list-style: none;
     margin-top: 10px;
     text-transform: capitalize;
+    font-size: 1rem;
+}
+
+.categorieTitle{
+    font-size: 1.2rem;
+    font-weight: bold;
 }
