--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,12 @@
-<section class="homeContent">
-    <div class="textContainerHome">
-        <span class="titleHome">Welcome to <span class="bold">The <span class="colorRed">Shop</span></span></span>
-        <span class="descriptionHome">We are the best Web App to buy <a routerLink="/products/all" class="routerLink"><span class="bold colorRed">products</span></a></span>
+<section class="home">
+    <div class="home__card">
+        <span class="home__title">Welcome to <span class="bold">The <span class="colorRed">Shop</span></span></span>
+        <span class="home__description">We are the best Web App to buy <a routerLink="/products/all" class="routerLink"><span class="bold colorRed">products</span></a></span>
         <div>
             <a class="routerLink" routerLink="/products/all"><button class="button">Buy now</button></a>
         </div>
     </div>
     <div>
-        <img src="https://placehold.co/300x300" alt="shopping_site" class="image">
+        <img src="https://placehold.co/300x300" alt="shopping_site" class="home__image">
     </div>
 </section>
