--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,15 +1,15 @@
-<section *ngIf="!!product; else productNotFound" class="productCardInfo">
-    <img src="{{product.imageUrl}}" alt="" class="imageProduct">
-    <div class="informationsProduct">
-        <p class="productName">{{product.name}}</p>
-        <p class="productPrice">R$ {{product.price}},00</p>
-        <p class="productDescription">{{product.description}}</p>
+<section *ngIf="!!product; else productNotFound" class="product__card">
+    <img src="{{product.imageUrl}}" alt="" class="product__image">
+    <div class="product__content">
+        <p class="product__name">{{product.name}}</p>
+        <p class="product__price">R$ {{product.price}},00</p>
+        <p class="product_description">{{product.description}}</p>
         <a routerLink="/cart"><button class="button" (click)="handleClick()">Add to cart</button></a>
     </div>
 </section>
 
 <ng-template #productNotFound>
-    <span class="productDontExists">This Product dont exits!</span>
+    <span class="product__text__notfound">This Product dont exits!</span>
 </ng-template>
 
 
