--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -1,29 +1,29 @@
-.productCart{
+.cart{
     display: flex;
     flex-direction: row;
     gap: 30px;
     margin: 50px 0px;
 }
 
-.productCartItems{
+.cart__items{
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.productCartValue{
+.cart__value{
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.productCartTotal{
+.cart__text{
     font-size: 1.5rem;
     font-weight: bold;
 }
 
 @media screen and (max-width: 650px){
-    .productCart{
+    .cart{
         flex-direction: column-reverse;
         align-items: center;
     }
