--- a/src/app/pages/products/products.component.css
+++ b/src/app/pages/products/products.component.css
@@ -1,11 +1,11 @@
-.productsContainer{
+.products__container{
     display: flex;
     flex-direction: row;
     margin: 100px 0px;
     gap: 10px;
 }
 
-.productsContent{
+.products__items{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -14,7 +14,7 @@
     max-width: 60vw;
 }
 
-.categorieList{
+.products__categories__list{
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -22,14 +22,14 @@
     justify-content: center;
 }
 
-.categorieListItem{
+.products__categories__item{
     list-style: none;
     margin-top: 10px;
     text-transform: capitalize;
     font-size: 1rem;
 }
 
-.categorieTitle{
+.products__categories__title{
     font-size: 1.2rem;
     font-weight: bold;
 }
